src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --background: #ffffff;
  --foreground: #171717;
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #171717;
    --foreground: #f5f5f5;
  }
}

html {
  color-scheme: dark light;
}

body {
  color: var(--foreground);
  background: var(--background);
  font-family: "GeistSans", system-ui, -apple-system, BlinkMacSystemFont,
    "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
    sans-serif;

}

